test: restructure test packages
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -141,9 +141,9 @@ jobs:
       if: ${{ matrix.target_arch == matrix.host_arch && matrix.target_os == matrix.host_os && matrix.host_os == 'windows' }}
       run: make tests GINKGO_EXTRA_OPTS="--label-filter=!broken-on-windows"
 
-    - name: Run integration tests
+    - name: Run end-to-end tests
       if: ${{ matrix.target_arch == matrix.host_arch && matrix.target_os == matrix.host_os && matrix.host_os == 'linux' }}
-      run: sudo --preserve-env env "PATH=$PATH" make tests-integration
+      run: sudo --preserve-env env "PATH=$PATH" make tests-e2e
 
     - name: Upload logs an packet captures as artifacts
       if: ${{ always() && matrix.target_arch == matrix.host_arch && matrix.target_os == matrix.host_os && matrix.host_os == 'linux' }}
