rtsync: support configuration of routing table
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/etc/wice.yaml
+++ b/etc/wice.yaml
@@ -48,7 +48,7 @@ config_sync:
 route_sync:
   enabled: true
 
-  table: main
+  table: 254 # See /etc/iproute2/rt_tables for table ids
 
 # Discover the WireGuard endpoint of peers
 endpoint_disc:
