--- a/etc/wice.yaml
+++ b/etc/wice.yaml
@@ -1,3 +1,4 @@
+# An interval at which wice will periodically check for added, removed or modified WireGuard interfaces.
 watch_interval: 1s
 community: "some-common-password"
 
