ci: use correct version of setup-go action
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/.github/workflows/analysis.yaml
+++ b/.github/workflows/analysis.yaml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@main
+        uses: actions/checkout@v2
 
       - name: Run Codacy Analysis CLI
         uses: codacy/codacy-analysis-cli-action@master
