--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -34,10 +34,15 @@ builds:
   goarch:
   - amd64
   - arm64
-  - arm
+  # - mips
+  # - arm
   
   goarm:
   - "7"
+
+  gomips:
+  - softfloat
+  - hardfloat
 
   ignore:
   - goos: windows
@@ -130,37 +135,37 @@ dockers:
   - --label=org.opencontainers.image.revision={{ .FullCommit }}
   - --label=org.opencontainers.image.licenses=Apache-2.0
 
-- use: buildx
-  dockerfile: Dockerfile.scratch
-  goos: linux
-  goarch: arm
-  goarm: "7"
-  image_templates:
-  - "ghcr.io/stv0g/{{ .ProjectName }}:latest-armv7"
-  - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Major }}-armv7"
-  - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Major }}.{{ .Minor }}-armv7"
-  - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Major }}.{{ .Minor }}.{{ .Patch }}-armv7"
-  build_flag_templates:
-  - --platform=linux/arm/v7
-  - --label=org.opencontainers.image.title={{ .ProjectName }}
-  - --label=org.opencontainers.image.description={{ .ProjectName }}
-  - --label=org.opencontainers.image.url=https://github.com/stv0g/{{ .ProjectName }}
-  - --label=org.opencontainers.image.source=https://github.com/stv0g/{{ .ProjectName }}
-  - --label=org.opencontainers.image.version={{ .Version }}
-  - --label=org.opencontainers.image.created={{ time "2006-01-02T15:04:05Z07:00" }}
-  - --label=org.opencontainers.image.revision={{ .FullCommit }}
-  - --label=org.opencontainers.image.licenses=Apache-2.0
+# - use: buildx
+#   dockerfile: Dockerfile.scratch
+#   goos: linux
+#   goarch: arm
+#   goarm: "7"
+#   image_templates:
+#   - "ghcr.io/stv0g/{{ .ProjectName }}:latest-armv7"
+#   - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Major }}-armv7"
+#   - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Major }}.{{ .Minor }}-armv7"
+#   - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Major }}.{{ .Minor }}.{{ .Patch }}-armv7"
+#   build_flag_templates:
+#   - --platform=linux/arm/v7
+#   - --label=org.opencontainers.image.title={{ .ProjectName }}
+#   - --label=org.opencontainers.image.description={{ .ProjectName }}
+#   - --label=org.opencontainers.image.url=https://github.com/stv0g/{{ .ProjectName }}
+#   - --label=org.opencontainers.image.source=https://github.com/stv0g/{{ .ProjectName }}
+#   - --label=org.opencontainers.image.version={{ .Version }}
+#   - --label=org.opencontainers.image.created={{ time "2006-01-02T15:04:05Z07:00" }}
+#   - --label=org.opencontainers.image.revision={{ .FullCommit }}
+#   - --label=org.opencontainers.image.licenses=Apache-2.0
 
 docker_manifests:
 - name_template: "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}"
   image_templates:
   - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-amd64"
-  - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-armv7"
+  # - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-armv7"
   - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-arm64v8"
 - name_template: "ghcr.io/stv0g/{{ .ProjectName }}:latest"
   image_templates:
   - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-amd64"
-  - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-armv7"
+  # - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-armv7"
   - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-arm64v8"
 
 snapshot:
