packaging: add missing 'v' prefix to versions
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -53,7 +53,7 @@ builds:
   - -X github.com/stv0g/cunicu/pkg/util/buildinfo.Version={{.Version}}
   - -X github.com/stv0g/cunicu/pkg/util/buildinfo.Commit={{.Commit}}
   - -X github.com/stv0g/cunicu/pkg/util/buildinfo.DateStr={{.Date}}
-  - -X github.com/stv0g/cunicu/pkg/util/buildinfo.Tag={{.Tag}}
+  - -X github.com/stv0g/cunicu/pkg/util/buildinfo.Tag=v{{.Tag}}
   - -X github.com/stv0g/cunicu/pkg/util/buildinfo.Branch={{.Branch}}
   - -X github.com/stv0g/cunicu/pkg/util/buildinfo.BuiltBy=goreleaser
 
