packaging: move some parts of the hooks to the Makefile
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -3,8 +3,7 @@ project_name: cunicu
 
 before:
   hooks:
-  - go mod tidy
-  - go generate ./...
+  - make prepare-release
 
 checksum:
   name_template: "checksums.txt"
