ci: install missing dependencies for release workflow
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,7 +22,8 @@ jobs:
         fetch-depth: 0
 
     - name: Install dependencies
-      run: sudo apt-get install -y protobuf-compiler
+      run: sudo apt-get install -y
+            protobuf-compiler
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
@@ -42,10 +43,8 @@ jobs:
         cache: true
 
     - name: Install build dependencies
-      run: |
-        go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
-        go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
-
+      run: make install-deps
+    
     - name: Run GoReleaser
       uses: goreleaser/goreleaser-action@v2
       with:
