ci: add new environment to protect environment variables for deployment
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/.github/workflows/test-website.yaml
+++ b/.github/workflows/test-website.yaml
@@ -13,8 +13,8 @@ defaults:
     working-directory: website
 
 jobs:
-  test-deploy:
-    name: Test deployment
+  test-website:
+    name: Test build of website
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
