--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,6 +12,7 @@ permissions:
 
 jobs:
   goreleaser:
+    environment: release
     runs-on: ubuntu-latest
     env:
       DOCKER_CLI_EXPERIMENTAL: "enabled"
@@ -53,4 +54,6 @@ jobs:
         args: release --rm-dist
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GEMFURY_TOKEN: ${{ secrets.GEMFURY_TOKEN }}
+        AUR_KEY: ${{ secrets.AUR_KEY }}
 
