--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/SchemaStore/schemastore/master/src/schemas/json/github-workflow.json
 ---
-name: Deploy website to GitHub Pages
+name: Build and deploy website to GitHub Pages
 
 on:
   push:
@@ -14,8 +14,9 @@ defaults:
 
 jobs:
   deploy:
-    name: Deploy to GitHub Pages
+    name: Build and deploy website to GitHub Pages
     runs-on: ubuntu-latest
+    environment: release
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -33,17 +34,10 @@ jobs:
     - name: Build website
       run: yarn build
 
-    # Popular action to deploy to GitHub Pages:
-    # Docs: https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-docusaurus
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./website/build
-        # The following lines assign commit authorship to the official
-        # GH-Actions bot for deploys to `gh-pages` branch:
-        # https://github.com/actions/checkout/issues/13#issuecomment-724415212
-        # The GH actions bot is used by default if you didn't specify the two fields.
-        # You can swap them out with your own user credentials.
         user_name: github-actions[bot]
         user_email: 41898282+github-actions[bot]@users.noreply.github.com
