--- a/etc/cunicu.yaml
+++ b/etc/cunicu.yaml
@@ -1,4 +1,4 @@
-# An interval at which cunicu will periodically check for added,
+# An interval at which cunīcu will periodically check for added,
 # removed or modified WireGuard interfaces.
 watch_interval: 1s
 
@@ -19,7 +19,7 @@ rpc:
   # and monitoring of the cunicu daemon.
   socket: /var/run/cunicu.sock
 
-  # Start of cunicu daemon will block until
+  # Start of cunīcu daemon will block until
   # its unblocked via the control socket.
   # Mostly useful for testing automation
   wait: false
@@ -28,7 +28,7 @@ rpc:
 ## Hook callbacks
 #
 # Hook callback can be used to invoke subprocesses
-# or web-hooks on certain events within cunicu.
+# or web-hooks on certain events within cunīcu.
 hooks:
 
 # An 'exec' hook spawn a subprocess for each event.
@@ -81,7 +81,7 @@ wireguard:
 
   # A range constraint for an automatically assigned
   # selected listen port.
-  # If the interface has no listen port specified, cunicu
+  # If the interface has no listen port specified, cunīcu
   # will use the first available port from this range.
   listen_port_range:
     min: 52820
