--- a/website/package.json
+++ b/website/package.json
@@ -24,6 +24,7 @@
     "mdx-mermaid": "^2.0.0-rc2",
     "mermaid": "^9.1.6",
     "prism-react-renderer": "^1.3.5",
+    "raw-loader": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rehype-katex": "5",
