--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -45,10 +45,10 @@ builds:
   - s390x
   # TODO: Reenable for Go 1.19.2 when the following issue has been fixed:
   #       https://github.com/golang/go/issues/54991
-  # - "386"
-  # - arm
-  # - mips
-  # - mipsle 
+  - "386"
+  - arm
+  - mips
+  - mipsle 
   
   goarm:
   - "7"
@@ -174,37 +174,37 @@ dockers:
   - --label=org.opencontainers.image.revision={{ .FullCommit }}
   - --label=org.opencontainers.image.licenses=Apache-2.0
 
-# - use: buildx
-#   dockerfile: Dockerfile.scratch
-#   goos: linux
-#   goarch: arm
-#   goarm: "7"
-#   image_templates:
-#   - "ghcr.io/stv0g/{{ .ProjectName }}:latest-armv7"
-#   - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Major }}-armv7"
-#   - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Major }}.{{ .Minor }}-armv7"
-#   - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Major }}.{{ .Minor }}.{{ .Patch }}-armv7"
-#   build_flag_templates:
-#   - --platform=linux/arm/v7
-#   - --label=org.opencontainers.image.title={{ .ProjectName }}
-#   - --label=org.opencontainers.image.description={{ .ProjectName }}
-#   - --label=org.opencontainers.image.url=https://github.com/stv0g/{{ .ProjectName }}
-#   - --label=org.opencontainers.image.source=https://github.com/stv0g/{{ .ProjectName }}
-#   - --label=org.opencontainers.image.version={{ .Version }}
-#   - --label=org.opencontainers.image.created={{ time "2006-01-02T15:04:05Z07:00" }}
-#   - --label=org.opencontainers.image.revision={{ .FullCommit }}
-#   - --label=org.opencontainers.image.licenses=Apache-2.0
+- use: buildx
+  dockerfile: Dockerfile.scratch
+  goos: linux
+  goarch: arm
+  goarm: "7"
+  image_templates:
+  - "ghcr.io/stv0g/{{ .ProjectName }}:latest-armv7"
+  - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Major }}-armv7"
+  - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Major }}.{{ .Minor }}-armv7"
+  - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Major }}.{{ .Minor }}.{{ .Patch }}-armv7"
+  build_flag_templates:
+  - --platform=linux/arm/v7
+  - --label=org.opencontainers.image.title={{ .ProjectName }}
+  - --label=org.opencontainers.image.description={{ .ProjectName }}
+  - --label=org.opencontainers.image.url=https://github.com/stv0g/{{ .ProjectName }}
+  - --label=org.opencontainers.image.source=https://github.com/stv0g/{{ .ProjectName }}
+  - --label=org.opencontainers.image.version={{ .Version }}
+  - --label=org.opencontainers.image.created={{ time "2006-01-02T15:04:05Z07:00" }}
+  - --label=org.opencontainers.image.revision={{ .FullCommit }}
+  - --label=org.opencontainers.image.licenses=Apache-2.0
 
 docker_manifests:
 - name_template: "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}"
   image_templates:
   - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-amd64"
-  # - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-armv7"
+  - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-armv7"
   - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-arm64v8"
 - name_template: "ghcr.io/stv0g/{{ .ProjectName }}:latest"
   image_templates:
   - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-amd64"
-  # - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-armv7"
+  - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-armv7"
   - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-arm64v8"
 
 snapshot:
