--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -128,7 +128,7 @@ jobs:
     - name: Setup Go
       uses: actions/setup-go@v3
       with:
-        go-version-file: 'go.mod'
+        go-version: 1.19.2
         check-latest: true
         cache: true
     
