--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -56,6 +56,7 @@ jobs:
         args: release --rm-dist
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        TAP_GITHUB_TOKEN: ${{ secrets.TAP_GITHUB_TOKEN }}
         GEMFURY_TOKEN: ${{ secrets.GEMFURY_TOKEN }}
         AUR_KEY: ${{ secrets.AUR_KEY }}
 
