aur: create directory for installing manpages
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -289,6 +289,7 @@ aurs:
     install -Dm644 "./LICENSE" "${pkgdir}/usr/share/licenses/cunicu/LICENSE"
 
     # manpages
+    install -d "${pkgdir}/usr/share/man/man1"
     install -Dm644 ./man/*.1 "${pkgdir}/usr/share/man/man1"
     
     # completions
